<resources>
    <string name="app_name">Игра-тренажер для памяти</string>
    <string name="play1">Карточки</string>
    <string name="play2">Цифры</string>
    <string name="back">Назад</string>
    <string name="level">Уровень:</string>
    <string name="finish">Запомнить</string>
    <string name="finish2">Проверить</string>
    <string name="textcontinue">Продолжить</string>
    <string name="level1">Уровень 1</string>
    <string name="level2">Уровень 2</string>
    <string name="level3">Уровень 3</string>
    <string name="level4">Уровень 4</string>
    <string name="level5">Уровень 5</string>

</resources>